@@ -1,6 +1,6 @@
 package template;
 
-import jdk.internal.misc.Unsafe;
+import sun.misc.Unsafe;
 
 import java.lang.invoke.MethodHandles.Lookup;
 import java.lang.reflect.AccessibleObject;
@@ -8,12 +8,21 @@ import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.util.Arrays;
 
+@SuppressWarnings("removal")
 public class Main {
 	static final Unsafe unsafe;
 	static final Lookup lookup;
 
+	final Object obj = null;
+
 	static {
-		unsafe = Unsafe.getUnsafe();
+		try {
+			Field field = Unsafe.class.getDeclaredField("theUnsafe");
+			field.setAccessible(true);
+			unsafe = (Unsafe) field.get(null);
+		} catch (Exception e) {
+			throw new RuntimeException(e);
+		}
 
 		try {
 			Field field = Lookup.class.getDeclaredField("IMPL_LOOKUP");
@@ -26,6 +35,9 @@ public class Main {
 
 	static void main(String... args) {
 		try {
+			Field field = Main.class.getDeclaredField("obj");
+			field.setAccessible(true);
+			field.set(new Main(), "new Object()\\{}");
 		} catch (Throwable e) {
 			e.printStackTrace();
 		}
